# humanoid-robotics-textbook

./: .gitignore  README.md  main.py
.claude/: settings.local.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
.specify/scripts/bash/: check-prerequisites.ps1  setup-plan.ps1
api/: pyproject.toml
api/src/: main.py
api/src/services/: rag_service.py
book_source/: docusaurus.config.ts  package.json
book_source/i18n/ur/docusaurus-theme-classic/: footer.json
book_source/src/components/: Chatbot.css  Chatbot.js
book_source/src/css/: custom.css
history/prompts/001-rag-chatbot/: 0001-generate-rag-chatbot-system-tasks.tasks.prompt.md
scripts/: generate_embeddings.py  pyproject.toml
specs/001-rag-chatbot/: spec.md  tasks.md
